// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationStatusTags component renders properly against props 1`] = `
<Fragment>
  <styled.div>
    <span>
      <styled.div
        key="0"
      >
        <EuiBadge
          color="#bd271e"
        >
          <EuiText
            size="m"
          >
            <styled.div>
              Berlin
            </styled.div>
          </EuiText>
        </EuiBadge>
        <styled.span>
          <EuiText
            color="subdued"
          >
            1 Mon ago
          </EuiText>
        </styled.span>
      </styled.div>
    </span>
    <span>
      <styled.div
        key="0"
      >
        <EuiBadge
          color="#d3dae6"
        >
          <EuiText
            size="m"
          >
            <styled.div>
              Berlin
            </styled.div>
          </EuiText>
        </EuiBadge>
        <styled.span>
          <EuiText
            color="subdued"
          >
            1 Mon ago
          </EuiText>
        </styled.span>
      </styled.div>
      <styled.div
        key="1"
      >
        <EuiBadge
          color="#d3dae6"
        >
          <EuiText
            size="m"
          >
            <styled.div>
              Islamabad
            </styled.div>
          </EuiText>
        </EuiBadge>
        <styled.span>
          <EuiText
            color="subdued"
          >
            1 Mon ago
          </EuiText>
        </styled.span>
      </styled.div>
    </span>
  </styled.div>
</Fragment>
`;

exports[`LocationStatusTags component renders when all locations are down 1`] = `
.c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
  white-space: nowrap;
}

.c0 {
  max-height: 229px;
  overflow: hidden;
  margin-top: auto;
}

@media (max-width:830px) {
  .c1 {
    display: inline-block;
    margin-right: 16px;
  }
}

<div
  class="c0"
>
  <span>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#bd271e;color:#fff"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Islamabad
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            5s ago
          </div>
        </div>
      </span>
    </div>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#bd271e;color:#fff"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Berlin
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            5m ago
          </div>
        </div>
      </span>
    </div>
  </span>
  <span />
</div>
`;

exports[`LocationStatusTags component renders when all locations are up 1`] = `
.c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
  white-space: nowrap;
}

.c0 {
  max-height: 229px;
  overflow: hidden;
  margin-top: auto;
}

@media (max-width:830px) {
  .c1 {
    display: inline-block;
    margin-right: 16px;
  }
}

<div
  class="c0"
>
  <span />
  <span>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#d3dae6;color:#000"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Berlin
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            5d ago
          </div>
        </div>
      </span>
    </div>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#d3dae6;color:#000"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Islamabad
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            5s ago
          </div>
        </div>
      </span>
    </div>
  </span>
</div>
`;

exports[`LocationStatusTags component renders when there are many location 1`] = `
Array [
  .c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
  white-space: nowrap;
}

.c0 {
  max-height: 229px;
  overflow: hidden;
  margin-top: auto;
}

@media (max-width:830px) {
  .c1 {
    display: inline-block;
    margin-right: 16px;
  }
}

<div
    class="c0"
  >
    <span>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Islamabad
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5s ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Berlin
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5m ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  st-paul
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5h ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Tokyo
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5d ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  New York
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              1 Mon ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Toronto
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5 Mon ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Sydney
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5 Yr ago
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#fff"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Paris
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              5 Yr ago
            </div>
          </div>
        </span>
      </div>
    </span>
    <span />
  </div>,
  .c0 {
  padding-left: 18px;
}

@media (max-width:830px) {

}

<div
    class="c0"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiTextColor euiTextColor--subdued"
      >
        <h4>
          1 Others ...
        </h4>
      </div>
    </div>
  </div>,
]
`;
